--- a/README
+++ b/README
@@ -53,6 +53,9 @@ make.bat
 Makefile
   Standard GNU makefile to build LaTeX document.
 
-svn-to-git-tex.txt
+svn-to-git.tex
+  Subversion to git conversion
+
+svn-to-git.txt
   Subvertion to git conversion
 
