Updated title, revision number, and abstract.

--- a/svn-to-git.tex
+++ b/svn-to-git.tex
@@ -1,10 +1,10 @@
 %% -*- Mode: LaTeX -*-
 %%
-%% template.tex
-%% Created Wed Jul 25 09:32:40 AKDT 2007
+%% svn-to-git.tex
+%% Crated Fri May 17 14:27:54 AKDT 2019
 %% by Raymond E. Marcil <marcilr@gmail.com>
 %% 
-%% LaTeX Template with Examples
+%% Subversion to Git Conversion
 %%
 
   %%
@@ -55,7 +55,7 @@
 %% o name of the user who has done the action
 %%
 \usepackage{svninfo}
-\svnInfo $Id: template.tex 52 2013-02-04 22:32:54Z marcilr $
+\svnInfo $Id: svn-to-git.tex 1 2013-02-04 22:32:54Z marcilr $
 
 %%
 %% Hyperref package for embedding URLs for clickable links in PDFs, 
@@ -79,7 +79,7 @@ hyperindex=false,
 urlcolor=blue,
 pdfborder={0 0 0},
 pdfauthor={Raymond E. Marcil},
-pdftitle={LaTeX Template with Examples},
+pdftitle={Subversion to Git Conversion},
 pdfcreator={ps2pdf},
 pdfsubject={LaTeX Examples},
 pdfkeywords={LaTeX Examples}
@@ -206,7 +206,8 @@ pdfkeywords={LaTeX Examples}
 %%%%%% Document.
   %%
 
-\title{\LaTeX\ Template}
+\title{Subversion to Git\\
+  Conversion}
 
 \author{Raymond E. Marcil\\
         \texttt{$<$marcilr@gmail.com$>$}
@@ -237,7 +238,9 @@ pdfkeywords={LaTeX Examples}
 \maketitle
 
 \begin{abstract}
-     This document contains \LaTeX\ Template with Examples.
+  This document contains the details of
+  Subversion to Git revision control system
+  conversion.
 
 \end{abstract}
 
