Update titlepage and comments

--- a/svn-to-git.tex
+++ b/svn-to-git.tex
@@ -236,9 +236,18 @@ pdfkeywords={LaTeX Examples}
 %%\rhead{Revision \svnInfoRevision\\
 %%\svnInfoLongDate}
 
-
+%%
+%% Main body of document.
+%%   
 \begin{document}
 
+%%
+%% Titlepage
+%% Got clean titlepage format from:
+%%   How can I get a title page with the LaTeX article class? [duplicate]
+%%   https://tex.stackexchange.com/questions/36929/\
+%%   how-can-i-get-a-title-page-with-the-latex-article-class
+%%
 \title{Subversion to Git Conversion}
 \author{Raymond E. Marcil}
 \maketitle
