--- a/svn-to-git.tex
+++ b/svn-to-git.tex
@@ -253,7 +253,8 @@ pdfkeywords={LaTeX Examples}
 \maketitle
 
 \begin{abstract}
-\lipsum[1]
+Details for Subversion to Git revision control system conversion.
+%%\lipsum[1]
 \end{abstract}
 
 
