--- a/svn-to-git.tex
+++ b/svn-to-git.tex
@@ -257,7 +257,8 @@ pdfkeywords={LaTeX Examples}
 \input{00SECTIONS/abbreviations.tex}
 \input{00SECTIONS/introduction.tex}
 \input{00SECTIONS/questions.tex}
-  
+\input{00SECTIONS/examples.tex}
+
 %%
 %% Main body of document
 %%
@@ -266,32 +267,6 @@ pdfkeywords={LaTeX Examples}
 %%\newpage
 %%\lipsum[1
 
-
-%% ======================== Examples =============================
-%% ======================== Examples =============================
-\newpage
-\section{Examples}
-Series of useful \LaTeX\ markup. Need to break out to 
-separate examples.tex file.
-
-\subsection{Escaping $<$ and $>$ Symbols}
-To get \$$<$\$ or \$$>$\$ just wrap the symbols in \$ for math mode.
-
-\subsection{Enumerate}
-\begin{enumerate}
-  \item{DNR} - Alaska State Department of Natural Resources
-    \begin{itemize*}
-      \item{HI} - Historical Index, not maintained since 1982
-      \item{LE} - Land Estate, maintained by SGU
-      \item{ME} - Mineral Estate, maintaind by SGU
-    \end{itemize*}
-
-  \item{Alaska State Surveys}
-    \begin{itemize*}
-      \item{ASBLT} - As-Built Survey
-      \item{ASCS} - Cadastral Survey
-    \end{itemize*}
-\end{enumerate}
 
 
 %% ======================= Comments =======================
