Migrated hyperlinks to separate document:   \input{00SECTIONS/hyperlinks.tex}

--- a/svn-to-git.tex
+++ b/svn-to-git.tex
@@ -259,6 +259,9 @@ pdfkeywords={LaTeX Examples}
 \input{00SECTIONS/questions.tex}
 \input{00SECTIONS/examples.tex}
 \input{00SECTIONS/comments.tex}
+\input{00SECTIONS/footnotes.tex}
+\input{00SECTIONS/hyperlinks.tex}
+
 
 %%
 %% Main body of document
@@ -268,37 +271,6 @@ pdfkeywords={LaTeX Examples}
 %%\newpage
 %%\lipsum[1
 
-
-
-%% ====================== Footnotes ======================
-%% ====================== Footnotes ======================
-\clearpage
-\newpage
-\subsection{Footnotes}
-See my
-footnote\footnote{\href{http://www.google.com/search?q=latex+footnotes}{Search}
-google for footnotes.}
-generated with:
-
-\begin{verbatim}
-  \footnote{\href{http://www.google.com/search?q=latex+footnotes}
-  {Search google for footnotes.}}
-\end{verbatim}
-
-\noindent GoogleGuide --- Linking to Search
-Results.\footnote{GoogleGuide --- \href{http://www.googleguide.com/linking.html}{Linking to Search Results.}}
-
-
-%% ====================== Hyperlinks ======================
-%% ====================== Hyperlinks ======================
-\subsection{Hyperlinks}
-Use $\backslash$href\{\} to generate hyperlinks:
-
-\begin{verbatim}
-  \href{http://www.google.com}{Google}}
-\end{verbatim}
-
-\noindent Yields: \href{http://www.google.com}{Google}
 
 
 %% ================ Table Examples ================
