Added appendix as include:   \input{00SECTIONS/appendix/appendix.tex}

--- a/svn-to-git.tex
+++ b/svn-to-git.tex
@@ -263,6 +263,8 @@ pdfkeywords={LaTeX Examples}
 %%\input{00SECTIONS/hyperlinks.tex}
 %%\input{00SECTIONS/table-examples.tex}
 \input{00SECTIONS/endnotes.tex}
+\input{00SECTIONS/appendix/appendix.tex}
+
 
 %%
 %% Main body of document
@@ -272,27 +274,6 @@ pdfkeywords={LaTeX Examples}
 %%\newpage
 %%\lipsum[1
 
-
-
-
-
-
-
-%% ======================== Appendix =============================
-%% ======================== Appendix =============================
-%%
-%% This will add a standard non-numbered Appendix to the document.
-%% The next section Appendix chnages secnumdepth such that the Appendix
-%% is not numbered but still displayed in the table of contents (TOC).
-%%
-%% Adding unnumbered sections to TOC
-%% http://tex.stackexchange.com/questions/11668/adding-unnumbered-sections-to-toc
-%% 
-%% \section*{Appendix}
-%% Need content here.
-%%
-\setcounter{secnumdepth}{0}
-\section{Appendix}
 
 
 %% ============= LaTeX - Wikibooks ===============
