Put footnotes before endnotes.

--- a/svn-to-git.tex
+++ b/svn-to-git.tex
@@ -259,9 +259,9 @@ pdfkeywords={LaTeX Examples}
 \input{00SECTIONS/questions.tex}
 \input{00SECTIONS/examples.tex}
 \input{00SECTIONS/comments.tex}
-\input{00SECTIONS/footnotes.tex}
 %%\input{00SECTIONS/hyperlinks.tex}
 %%\input{00SECTIONS/table-examples.tex}
+\input{00SECTIONS/footnotes.tex}
 \input{00SECTIONS/endnotes.tex}
 \input{00SECTIONS/appendix/appendix.tex}
 
@@ -272,22 +272,8 @@ pdfkeywords={LaTeX Examples}
 
 
 %%\newpage
-%%\lipsum[1
+%%\lipsum[1]
 
-
-
-%% ============= LaTeX - Wikibooks ===============
-A Guide to \LaTeX\\\
-\href{http://www.astro.rug.nl/~kuijken/latex.html}
-{http://www.astro.rug.nl/~kuijken/latex.html}
-\\
-\\
-\LaTeX\ - From Wikibooks,the open-content textbooks collection\\
-\href{http://en.wikibooks.org/wiki/LaTeX}{http://en.wikibooks.org/wiki/LaTeX}
-\\
-\\
-\LaTeX\ Notes\\
-\href{http://luke.breuer.com/time/item/LaTeX\_Notes/180.aspx}{http://luke.breuer.com/time/item/LaTeX\_Notes/180.aspx}
 
 \end{document}
 
