--- a/svn-to-git.tex
+++ b/svn-to-git.tex
@@ -258,7 +258,7 @@ pdfkeywords={LaTeX Examples}
 \input{00SECTIONS/introduction.tex}
 \input{00SECTIONS/examples.tex}
 \input{00SECTIONS/comments.tex}
-%%\input{00SECTIONS/hyperlinks.tex}
+\input{00SECTIONS/hyperlinks.tex}
 %%\input{00SECTIONS/table-examples.tex}
 \input{00SECTIONS/questions.tex}
 \input{00SECTIONS/footnotes.tex}
