Replaced missing * towards end of:   \end{tabular*}

--- a/00SECTIONS/table-examples.tex
+++ b/00SECTIONS/table-examples.tex
@@ -38,7 +38,7 @@ COMMENTS&VARCHAR2(256)&Plat comments\\
 \hline\\[-2.5ex]
 XML element&Descripton\\
 \hline
-\end{tabular}
+\end{tabular*}
 \caption {\cmd{EASEMENTS\_17B} Table}
 \label{table:easements_17b}
 \end{table}
