Commented out table that was breaking the build.

--- a/00SECTIONS/table-examples.tex
+++ b/00SECTIONS/table-examples.tex
@@ -10,6 +10,7 @@
 %% ================ Table Examples ================
 %% ================ Table Examples ================
 \subsection{Table Examples}
+
 \begin{table}[htb]
 \begin{tabular}{|p{.25\textwidth}|p{.20\textwidth}|p{.47\textwidth}|}\hline 
 Column Name&Type&Description\\ 
@@ -28,20 +29,24 @@ COMMENTS&VARCHAR2(256)&Plat comments\\
 \label{table:easements_17b}
 \end{table}
 
+%%
+%% This table example was breaking the build.
+%% Commnented out for analysis.
+%%
 %% A simple table example
 %% The htb attribute attempts to inline the table or figure
 %% where you put it in the document
-\begin{table}[htb]
-\begin{center}
-\begin{tabular*}{\textwidth}{@{}p{.25\textwidth}@{}p{.75\textwidth}}
-\hline
-\hline\\[-2.5ex]
-XML element&Descripton\\
-\hline
-\end{tabular*}
-\caption {\cmd{EASEMENTS\_17B} Table}
-\label{table:easements_17b}
-\end{table}
+%%\begin{table}[htb]
+%%\begin{center}
+%%\begin{tabular*}{\textwidth}{@{}p{.25\textwidth}@{}p{.75\textwidth}}
+%%\hline
+%%\hline\\[-2.5ex]
+%%XML element&Descripton\\
+%%\hline
+%%\end{tabular*}
+%%\caption {\cmd{EASEMENTS\_17B} Table}
+%%\label{table:easements_17b}
+%%\end{table}
 
 %% A simple table example
 %% The htb attribute attempts to inline the table or figure
