--- a/svn-to-git.tex
+++ b/svn-to-git.tex
@@ -259,7 +259,7 @@ pdfkeywords={LaTeX Examples}
 \input{00SECTIONS/examples.tex}
 \input{00SECTIONS/comments.tex}
 \input{00SECTIONS/hyperlinks.tex}
-%%\input{00SECTIONS/table-examples.tex}
+\input{00SECTIONS/table-examples.tex}
 \input{00SECTIONS/questions.tex}
 \input{00SECTIONS/footnotes.tex}
 \input{00SECTIONS/endnotes.tex}
