--- a/00SECTIONS/appendix/hyperlinks.tex
+++ b/00SECTIONS/appendix/hyperlinks.tex
@@ -10,6 +10,21 @@
 \subsection{Hyperlinks}
 Use $\backslash$href\{\} to generate hyperlinks:
 
+%% ============= LaTeX - Wikibooks ===============
+%% ============= LaTeX - Wikibooks ===============
+A Guide to \LaTeX\\\
+\href{http://www.astro.rug.nl/~kuijken/latex.html}
+{http://www.astro.rug.nl/~kuijken/latex.html}
+\\
+\\
+\LaTeX\ - From Wikibooks,the open-content textbooks collection\\
+\href{http://en.wikibooks.org/wiki/LaTeX}{http://en.wikibooks.org/wiki/LaTeX}
+\\
+\\
+\LaTeX\ Notes\\
+\href{http://luke.breuer.com/time/item/LaTeX\_Notes/180.aspx}{http://luke.breuer.com/time/item/LaTeX\_Notes/180.aspx}
+
+
 \begin{verbatim}
   \href{http://www.google.com}{Google}}
 \end{verbatim}
