Prepended with \newpage

--- a/00SECTIONS/questions.tex
+++ b/00SECTIONS/questions.tex
@@ -9,6 +9,7 @@
 
 %% ======================== Questions ============================
 %% ======================== Questions ============================
+\newpage
 \section{Questions}
 \begin{itemize*}
      \item{} Break table column over two rows?
