Updated from subsection to section.

--- a/00SECTIONS/footnotes.tex
+++ b/00SECTIONS/footnotes.tex
@@ -9,7 +9,7 @@
 %% ====================== Footnotes ======================
 \clearpage
 \newpage
-\subsection{Footnotes}
+\section{Footnotes}
 See my
 footnote\footnote{\href{http://www.google.com/search?q=latex+footnotes}{Search}
 google for footnotes.}
