Prepended wiht \newpage to put on new page

--- a/00SECTIONS/table-examples.tex
+++ b/00SECTIONS/table-examples.tex
@@ -9,6 +9,7 @@
 
 %% ================ Table Examples ================
 %% ================ Table Examples ================
+\newpage
 \subsection{Table Examples}
 
 \begin{table}[htb]
