Commented out \lipsum[1] from abstract:   %%\lipsum[1]

--- a/00SECTIONS/titlepage.tex
+++ b/00SECTIONS/titlepage.tex
@@ -11,7 +11,7 @@
 \maketitle
 \begin{abstract}
 Details for Subversion to Git revision control system conversion.
-\lipsum[1]
+%%\lipsum[1]
 \end{abstract}
 
 %% Draw DNR logo and address at bottom of page
