--- a/00SECTIONS/appendix/appendix.tex
+++ b/00SECTIONS/appendix/appendix.tex
@@ -22,4 +22,4 @@
 \setcounter{secnumdepth}{0}
 \section{Appendix}
 
-include{00SECTIONS/appendix/hyperlinks.tex}
+\include{00SECTIONS/appendix/hyperlinks.tex}
