Fixed typo in header.

--- a/svn-to-git.tex
+++ b/svn-to-git.tex
@@ -1,7 +1,7 @@
 %% -*- Mode: LaTeX -*-
 %%
 %% svn-to-git.tex
-%% Crated Fri May 17 14:27:54 AKDT 2019
+%% Created Fri May 17 14:27:54 AKDT 2019
 %% by Raymond E. Marcil <marcilr@gmail.com>
 %% 
 %% Subversion to Git Conversion
